# rhythmbox

./: .gitignore  configure.ac  meson.build
backends/: meson.build
backends/gstreamer/: meson.build
lib/: meson.build
lib/libmediaplayerid/: meson.build
metadata/: meson.build  rb-ext-db.c
plugins/: meson.build
plugins/ipod/: ipod.plugin.in
plugins/mtpdevice/: meson.build  mtpdevice.plugin.in
podcast/: meson.build  rb-podcast-manager.c
remote/dbus/: meson.build
rhythmdb/: meson.build
shell/: meson.build  rb-application.c
sources/: meson.build
sources/sync/: meson.build
widgets/: meson.build
